--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
       <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
       <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -28,6 +28,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name="com.currencyconvertor.BroadcastReceiver.ConnectionChangeReceiver" >
+        <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE">
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED">
+            </action></action></intent-filter>
+    </receiver>
     </application>
 
 </manifest>
